--- a/objects.html
+++ b/objects.html
@@ -14,7 +14,7 @@
     }
     return max;
 }
-document.getElementById("result").innerHtml = findmax(4,5,6);
+document.getElementById("result").innerHTML = findmax(4,5,6);
 
  </script>
     
